--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,9 @@
-name: 'Firebase Deploy'
+name: 'Auto Deployment to Firebase'
 author: 'John Pickett <john-pickett@github.com>'
 description: 'A GitHub Action to deploy to Firebase Hosting'
 runs:
   using: 'docker'
   image: 'Dockerfile'
 branding:
-  icon: 'fire'
+  icon: 'anchor'
   color: 'purple'
